--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asistente-de-código-ia",
+  "name": "asistente-de-codigo-ia",
   "private": true,
   "homepage": "https://pablogguizar.github.io/vibe-tutorial",
   "version": "0.0.0",
@@ -9,7 +9,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.0",
